Add the time_left span back

--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -42,6 +42,7 @@ data-notebook-path="{{notebook_path | urlencode}}"
     <span id="notebook_name" class="filename"></span>
     <span class="checkpoint_status"></span>
     <span class="autosave_status"></span>
+    <span id='time_left' style='margin-left:5px; margin-right:5px;'></span>
 </span>
 
 {{super()}}
